<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2C044"
    android:backgroundTint="#E5C655"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/view_teamA"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="Team Name"
        android:backgroundTint="@android:color/transparent"
        android:inputType="text"
        android:text="@string/view_teamA"
        android:textAlignment="center"
        android:textColor="#393E41"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/view_teamB"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:autofillHints="Team Name"
        android:backgroundTint="@android:color/transparent"
        android:inputType="text"
        android:text="@string/view_teamB"
        android:textAlignment="center"
        android:textColor="#393E41"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/view_teamA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_teamA"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button_addScoreTeamA"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#393E41"
        android:text="@string/button_addScore"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/button_addScoreTeamB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_teamA" />

    <Button
        android:id="@+id/button_addScoreTeamB"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#393E41"
        android:text="@string/button_addScore"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_addScoreTeamA"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/show_scoreTeamA"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/scoreDefaultValue"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_addScoreTeamA" />

    <TextView
        android:id="@+id/show_scoreTeamB"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:text="@string/scoreDefaultValue"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/show_scoreTeamA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/show_scoreTeamA" />


    <Button
        android:id="@+id/button_removeScoreTeamA"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:backgroundTint="#393E41"
        android:text="@string/button_removeScore"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_scoreTeamA" />

    <Button
        android:id="@+id/button_removeScoreTeamB"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#393E41"
        android:text="@string/button_removeScore"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_removeScoreTeamA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_removeScoreTeamA" />

    <RadioGroup
        android:id="@+id/radioGroup_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_removeScoreTeamA"
        >

        <RadioButton
            android:id="@+id/radioButton_score1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#393E41"
            android:text="@string/score1"
            android:textSize="16sp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButton_score2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#393E41"
            android:text="@string/score2"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_score3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#393E41"
            android:text="@string/score3"
            android:textSize="16sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>